2.1 Remove Dups: replace Arrays.asList to the new List.of API in unit test