@@ -2,7 +2,6 @@ package pers.mingda.crackingcodinginterview.chapter2linkedlists;
 
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -19,10 +18,10 @@ public class _2_1RemoveDupsTest {
 
     @Test
     public void testDeleteDups() {
-        List<Integer> nodeValues = Arrays.asList(1, 2, 3, 4, 5, 1);
+        List<Integer> nodeValues = List.of(1, 2, 3, 4, 5, 1);
         LinkedListNode node = testHelper.buildNodeList(nodeValues);
 
-        List<Integer> expectedNodeValues = Arrays.asList(1, 2, 3, 4, 5);
+        List<Integer> expectedNodeValues = List.of(1, 2, 3, 4, 5);
         LinkedListNode expectedNode = testHelper.buildNodeList(expectedNodeValues);
         
         _2_1RemoveDups.deleteDups(node);
@@ -30,17 +29,17 @@ public class _2_1RemoveDupsTest {
         assertTrue(testHelper.equals(expectedNode, node));
 
 
-        nodeValues = Arrays.asList(1, 2, 3, 4, 5, 1, 6, 2, 7);
+        nodeValues = List.of(1, 2, 3, 4, 5, 1, 6, 2, 7);
         node = testHelper.buildNodeList(nodeValues);
 
-        expectedNodeValues = Arrays.asList(1, 2, 3, 4, 5, 6, 7);
+        expectedNodeValues = List.of(1, 2, 3, 4, 5, 6, 7);
         expectedNode = testHelper.buildNodeList(expectedNodeValues);
         
         _2_1RemoveDups.deleteDups(node);
         
         assertTrue(testHelper.equals(expectedNode, node));
 
-        nodeValues = Arrays.asList(1, 2, 3, 4);
+        nodeValues = List.of(1, 2, 3, 4);
         node = testHelper.buildNodeList(nodeValues);
 
         expectedNodeValues = nodeValues;
@@ -53,10 +52,10 @@ public class _2_1RemoveDupsTest {
 
     @Test
     public void testDeleteDupsNoBuffer() {
-        List<Integer> nodeValues = Arrays.asList(1, 2, 3, 4, 5, 1);
+        List<Integer> nodeValues = List.of(1, 2, 3, 4, 5, 1);
         LinkedListNode node = testHelper.buildNodeList(nodeValues);
 
-        List<Integer> expectedNodeValues = Arrays.asList(1, 2, 3, 4, 5);
+        List<Integer> expectedNodeValues = List.of(1, 2, 3, 4, 5);
         LinkedListNode expectedNode = testHelper.buildNodeList(expectedNodeValues);
         
         _2_1RemoveDups.deleteDupsNoBuffer(node);
@@ -64,17 +63,17 @@ public class _2_1RemoveDupsTest {
         assertTrue(testHelper.equals(expectedNode, node));
 
 
-        nodeValues = Arrays.asList(1, 2, 3, 4, 5, 1, 6, 2, 7);
+        nodeValues = List.of(1, 2, 3, 4, 5, 1, 6, 2, 7);
         node = testHelper.buildNodeList(nodeValues);
 
-        expectedNodeValues = Arrays.asList(1, 2, 3, 4, 5, 6, 7);
+        expectedNodeValues = List.of(1, 2, 3, 4, 5, 6, 7);
         expectedNode = testHelper.buildNodeList(expectedNodeValues);
         
         _2_1RemoveDups.deleteDupsNoBuffer(node);
         
         assertTrue(testHelper.equals(expectedNode, node));
 
-        nodeValues = Arrays.asList(1, 2, 3, 4);
+        nodeValues = List.of(1, 2, 3, 4);
         node = testHelper.buildNodeList(nodeValues);
 
         expectedNodeValues = nodeValues;
